--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -12,3 +12,13 @@ find_package(eigenpy 3.9 REQUIRED)
 Python3_add_library(tartempion MODULE WITH_SOABI module.cpp)
 
 target_link_libraries(tartempion PRIVATE eigenpy::eigenpy fonction)
+
+# find_package(Python3 REQUIRED COMPONENTS Interpreter Development.Module)
+
+# Python3_add_library(tartempion MODULE WITH_SOABI module.cpp)
+
+# target_link_libraries(tartempion PRIVATE eigenpy::eigenpy fonction)
+
+# installe le .so dans le site-packages du Python courant (ton env conda actif)
+# install(TARGETS tartempion
+#         LIBRARY DESTINATION ${Python3_SITEARCH})
