--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,14 @@ option(ENABLE_TRACY "Enable Tracy profiler" OFF)
 option(DISCARD_NON_CONVERGENT_IK "Discard non convergent IK" OFF)
 option(GENERATE_PYTHON_STUBS "Generate and install Python stub files (.pyi)" ON)
 
+if(ENABLE_LTO)
+    if(CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+        message(STATUS "Enabling LTO for ${CMAKE_BUILD_TYPE}")
+        set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
+    else()
+        message(WARNING "LTO enabled but ignored for build type ${CMAKE_BUILD_TYPE} (only Release and RelWithDebInfo supported)")
+    endif()
+endif()
 
 option(COLLISIONS_SUPPORT "Enable collisions support" ON)
 if(COLLISIONS_SUPPORT)
